// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`complex.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
type TupleWithRest = [number, ...(1 extends 2 ? string[] : number[])];

=====================================output=====================================
type TupleWithRest = [number, ...(1 extends 2 ? string[] : number[])];

================================================================================
`;

exports[`simple.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
type X = [...number[]];

=====================================output=====================================
type X = [...number[]];

================================================================================
`;
